add liveness probe
