# k8s.webhook/cmd/user-management/docs/swagger.json
@@ -375,6 +375,35 @@
                 }
             }
         },
+        "/healthz": {
+            "get": {
+                "description": "send OK if it database connexion works",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "healthz"
+                ],
+                "summary": "healthcheck",
+                "responses": {
+                    "200": {
+                        "description": "status",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/error.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/roles": {
             "get": {
                 "description": "get all roles",
@@ -415,6 +444,17 @@
                     "roles"
                 ],
                 "summary": "Create a role",
+                "parameters": [
+                    {
+                        "description": "dto",
+                        "name": "role",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.RoleDTO"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "dto",
@@ -481,6 +521,15 @@
                 ],
                 "summary": "Modify a role details",
                 "parameters": [
+                    {
+                        "description": "dto",
+                        "name": "role",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.RoleDTO"
+                        }
+                    },
                     {
                         "type": "string",
                         "description": "role name",
