# k8s.webhook/cmd/user-management/main.go
@@ -7,6 +7,7 @@ import (
 	"github.com/gorilla/mux"
 	httpSwagger "github.com/swaggo/http-swagger"
 	_ "scabarrus.com/k8s.webhook/cmd/user-management/docs" // docs is generated by Swag CLI, you have to import it.
+	"scabarrus.com/k8s.webhook/internal/liveness"
 	"scabarrus.com/k8s.webhook/internal/service"
 	"scabarrus.com/k8s.webhook/middleware"
 )
@@ -68,8 +69,10 @@ func main (){
 	r.HandleFunc("/api/v1/roles/{role}/members/{member}", roleMemberService.FindByName).Methods("GET")
 	r.HandleFunc("/api/v1/roles/{role}/members/{member}", roleMemberService.Delete).Methods("DELETE")
 	
+	r.HandleFunc("/api/v1/healthz",liveness.Healthz).Methods("GET")
 	r.PathPrefix("/swagger").Handler(httpSwagger.WrapHandler)
 
+	
 	r.Use(middleware.LoggingMiddleware)
 
     http.ListenAndServe(":9443", r)
